fix: overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -173,7 +173,7 @@ pre {
   white-space: pre;
 }
 
-pre > code {
+pre code {
   overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
